Fix spacing for hamburger button

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -15,7 +15,7 @@
 /*hero*/
 .parallax-image {
   background: linear-gradient(to top, transparent 0%, white 250%), url('background.jpg');
-  height: 40vh;
+  height: 45vh;
   background-attachment: fixed;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -28,7 +28,7 @@
 .hilary-lewis-image {
   position: absolute;
   left: 42%;
-  top: 30vh;
+  top: 27vh;
   height: 250px;
   border-radius: 50%;
   box-shadow: 0 0 10px #D3D6DB;
