--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,5 +1,4 @@
 .Header {
-  /*margin: 15px;*/
   text-align: right;
   letter-spacing: 2px;
   font-family: 'Muli', sans-serif;
@@ -10,6 +9,7 @@
 .hamburger-menu {
   z-index: 1000000;
   margin: 20px;
+  top: 0;
 }
 
 .menu {
@@ -18,7 +18,7 @@
   width: 100%;
   position: absolute;
   text-align: center;
-  left: 0;
+  top: 0;
   margin: 45px 0px;
   box-shadow: 0 0 10px #D3D6DB;
 }
@@ -43,7 +43,7 @@
 
 .menu ul li a {
   text-decoration: none;
-  margin: 0px;
+  /*margin: 0px;*/
   color: white;
 }
 
